# xcore_iot

./: .gitmodules  CMakeLists.txt
examples/: examples.cmake
examples/MEML/UART_read/: README.md  UART_read.cmake  XK-EVK-XU316.xn
examples/MEML/UART_read/src/: main.c
examples/MEML/UART_read/src/demos/: app_demos.h  uart_demo.c
examples/MEML/UART_read/src/platform/: platform_init.h  platform_init_tile0.c  platform_init_tile1.c  tile_support.h
examples/MEML/fmsynth_joystick/: XCORE-AI-EXPLORER.xn  fmsynth_joystick.cmake
examples/MEML/fmsynth_joystick/src/: app_conf.h  config.xscope  main.c
examples/MEML/fmsynth_joystick/src/audio_pipeline/: audio_pipeline.c  fmsynth_wrapper.cpp
examples/MEML/fmsynth_joystick/src/cpp_wrappers/: c_wrapper_decl.h  chans_and_data.h  fmsynth_wrapper.cpp  fmsynth_wrapper.hpp  interface_wrapper.cpp  interface_wrapper.hpp  mlp_wrapper.cpp  mlp_wrapper.hpp  uart_wrapper.cpp  uart_wrapper.hpp
examples/MEML/fmsynth_joystick/src/demos/: uart_demo.c
examples/MEML/fmsynth_joystick/src/misc/: probes.h
examples/MEML/fmsynth_joystick/src/multitile/: tile_map.xc
examples/MEML/i2s_loopback/: README.md  i2s_loopback.cmake
examples/MEML/i2s_loopback/src/: app_conf.h  config.xscope  main.c
examples/bare-metal/explorer_board/: explorer_board.cmake
examples/bare-metal/explorer_board/src/: app_conf.h  main.c  mlp_wrapper.cpp  mlp_wrapper.hpp
modules/: CMakeLists.txt
modules/meml/: CMakeLists.txt
modules/meml/utils/: CMakeLists.txt
modules/meml/utils/include/: Flash.hpp  FlashSerialiser.hpp  Serialise.hpp
(+17 files in other folders)
